# HybridRecommender

./: HybridRecommenderSystem.ipynb  PyTorch-Interview.py  README.md  TensorFlow-Interview.py  app.py  pyproject.toml
data/: config.ini
hybridrecommenderlightfm/: model.py  recommendations.py  utils.py
notebooks/: Recommender.py
output/: final_model.pkl
src/: engine.py
src/hybridrecommenderlightfm/: preprocessing.py  train_test_merge.py
