[tool.poetry]
name = "hybridrecommenderlightfm"
version = "0.1.0"
description = ""
authors = ["Vatsal Raicha <vatsalraicha@outlook.com>"]
readme = "README.md"
packages = [{include = "hybridrecommenderlightfm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
